# tinycml

./: AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDEAS.md  Makefile  PROMPT.md  README.md  ROADMAP.md  SECURITY.md  tinycml.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: main.c
docs/: API.md  API_TR.md  ROADMAP.md
examples/: CMakeLists.txt  feature_selection_example.c  kmeans_example.c  logistic_regression_example.c  pipeline_example.c  random_forest_example.c
include/: cml_serialization.h  cml_simd.h  csv.h  decomposition.h  ensemble.h  estimator.h  feature_selection.h  knn.h  lasso.h  linear_regression.h  logistic_regression.h  metrics.h  model_selection.h  naive_bayes.h  onehot_encoder.h  svm.h  utils.h  validation.h
python/tinycml/: __init__.py  _bindings.py
scripts/: amalgamate.sh
specs/: 05-build-system.md
src/: cml_serialization.c  cml_simd.c  csv.c  decision_tree.c  decomposition.c  ensemble.c  estimator.c  feature_selection.c  gradient_boosting.c  knn.c  lasso.c  linear_regression.c  logistic_regression.c  matrix.c  metrics.c  model_selection.c  naive_bayes.c  neural_network.c  onehot_encoder.c  pipeline.c  svm.c  utils.c  validation.c  vector.c
tests/: CMakeLists.txt  benchmark_matmul.c  test_dbscan.c  test_decision_tree.c  test_lasso.c  test_logreg_model.c  test_matrix.c  test_model_selection.c  test_multinomial_nb.c  test_naive_bayes.c  test_onehot.c  test_pca.c  test_pipeline.c  test_silhouette.c  test_simd.c  test_svm.c  test_svm_rbf.c
wasm/: Makefile
